tests/negative/test_block_passing_no_pass_has_loop.orb
fnc main () () {
    sym (x 0);
    block i32 {
        = x (+ x 1);
        loop (< x 5);
        loop false;
    };
};